Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <label>CPF - Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>