Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/CPF_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>CPF_Destinatario__c</fullName>
    <label>CPF - Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>