Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Data_da_Vencimiento_Duplicata__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Vencimiento_Duplicata__c</fullName>
    <label>Data da Vencimiento Duplicata</label>
    <type>Date</type>
</CustomField>