Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Data_e_hora_de_Emissao_do_Documento__c.field-meta.xml
<CustomField>
    <fullName>Data_e_hora_de_Emissao_do_Documento__c</fullName>
    <label>Data e hora de Emissao do Documento</label>
    <type>DateTime</type>
</CustomField>