Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Data_e_hora_de_Saida_ou_da_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Data_e_hora_de_Saida_ou_da_Entrada__c</fullName>
    <label>Data e hora de Saida ou da Entrada</label>
    <type>DateTime</type>
</CustomField>