Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Destinatario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinatario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas fiscais eletrônicas (Destinatario)</relationshipLabel>
    <relationshipName>Notas_fiscais_eletr_nicas1</relationshipName>
    <type>Lookup</type>
</CustomField>