Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario_Bairro_Distrito__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_Bairro_Distrito__c</fullName>
    <label>Bairro / Distrito - Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>