Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario_CNAE_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_CNAE_Fiscal__c</fullName>
    <label>CNAE Fiscal - Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>