Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario_Email__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_Email__c</fullName>
    <label>Email - Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>