Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario_Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_Endere_o__c</fullName>
    <label>Endereço - Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>