Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario_Raz_o_Social__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_Raz_o_Social__c</fullName>
    <label>Razão Social - Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>