Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario_Telefone__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_Telefone__c</fullName>
    <label>Telefone - Destinatario</label>
    <type>Phone</type>
</CustomField>