Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Destinatario_UF__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_UF__c</fullName>
    <label>UF - Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>