Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Email_do_Agricultor__c.field-meta.xml
<CustomField>
    <fullName>Email_do_Agricultor__c</fullName>
    <label>Email do Agricultor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>