Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Emitente_Munic_pio__c.field-meta.xml
<CustomField>
    <fullName>Emitente_Munic_pio__c</fullName>
    <label>Município - Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>