Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Emitente_Nome_Fantas__c.field-meta.xml
<CustomField>
    <fullName>Emitente_Nome_Fantas__c</fullName>
    <label>Emitente Nome Fantasia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>