Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Emitente_Pa_s__c.field-meta.xml
<CustomField>
    <fullName>Emitente_Pa_s__c</fullName>
    <label>País - Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>