Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Emitente_Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Emitente_Razon_Social__c</fullName>
    <label>Razão Social - Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>