Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Emitente_Telefone__c.field-meta.xml
<CustomField>
    <fullName>Emitente_Telefone__c</fullName>
    <label>Telefone - Emitente</label>
    <type>Phone</type>
</CustomField>