Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Emitente_UF__c.field-meta.xml
<CustomField>
    <fullName>Emitente_UF__c</fullName>
    <label>Emitente UF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>