Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para vinculo de NF a Empresa (Conta SF) que cadastrou a mesma.</description>
    <inlineHelpText>Campo para vinculo de NF a Empresa (Conta SF) que cadastrou a mesma.</inlineHelpText>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas fiscais eletrônicas (Empresa)</relationshipLabel>
    <relationshipName>Notas_fiscais_eletr_nicas2</relationshipName>
    <type>Lookup</type>
</CustomField>