Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dinheiro</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cartao de Credito</fullName>
            </value>
            <value>
                <fullName>Cartao de Debito</fullName>
            </value>
            <value>
                <fullName>Credito Loja</fullName>
            </value>
            <value>
                <fullName>Vale Alimentacao</fullName>
            </value>
            <value>
                <fullName>Vale Refeicao</fullName>
            </value>
            <value>
                <fullName>Vale Presente</fullName>
            </value>
            <value>
                <fullName>Vale Combustivel</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Duplicata Mercantil</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90 - Sem pagamento</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>1 - Dinheiro</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>2 - Cheque</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>99 - Outros</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>5 - Crédito Loja</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>4 - Cartão de Débito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>