Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Informa_es_Complementares_de_Interesse__c.field-meta.xml
<CustomField>
    <fullName>Informa_es_Complementares_de_Interesse__c</fullName>
    <label>Informações Complementares de Interesse</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>