Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Marca_Dos_Volumes_Transportados__c.field-meta.xml
<CustomField>
    <fullName>Marca_Dos_Volumes_Transportados__c</fullName>
    <label>Marca Dos Volumes Transportados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>