Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>