Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Motivo_invalida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_invalida__c</fullName>
    <label>Motivo invalida</label>
    <type>TextArea</type>
</CustomField>