Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Municipio_Transportador__c.field-meta.xml
<CustomField>
    <fullName>Municipio_Transportador__c</fullName>
    <label>Municipio Transportador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>