Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Natureza_da_Opera_o__c.field-meta.xml
<CustomField>
    <fullName>Natureza_da_Opera_o__c</fullName>
    <label>Natureza da Operação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>