Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Nome_do_Agricultor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Agricultor__c</fullName>
    <label>Nome do Agricultor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>