Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Nome_Transporta__c.field-meta.xml
<CustomField>
    <fullName>Nome_Transporta__c</fullName>
    <label>Nome Transporta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>