Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Numero_do_Documento_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Documento_Fiscal__c</fullName>
    <label>Numero do Documento Fiscal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>