Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Peso_Bruto_Volumes_Transportados__c.field-meta.xml
<CustomField>
    <fullName>Peso_Bruto_Volumes_Transportados__c</fullName>
    <label>Peso Bruto Volumes Transportados (Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>