Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Placa_veiculo__c.field-meta.xml
<CustomField>
    <fullName>Placa_veiculo__c</fullName>
    <label>Placa veiculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>