Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Quantidade_KG_Total_NF__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_KG_Total_NF__c</fullName>
    <description>Marca en tiempo real la cantidad total de Quantidade KG de productos asociados a la Nota Fiscal</description>
    <label>Quantidade KG Total NF</label>
    <summarizedField>Produto_da_nota_fiscal__c.Quantidade_KG__c</summarizedField>
    <summaryForeignKey>Produto_da_nota_fiscal__c.Nota_Fiscal_Eletr_nica__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>