Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/RNTC__c.field-meta.xml
<CustomField>
    <fullName>RNTC__c</fullName>
    <label>RNTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>