Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Serie_Do_Documento_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Serie_Do_Documento_Fiscal__c</fullName>
    <label>Serie Do Documento Fiscal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>