Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Tipo_de_Operacao_NFe__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Operacao_NFe__c</fullName>
    <label>Tipo de Operacao NFe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Entrada</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Salida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>