Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/UF_Transportador__c.field-meta.xml
<CustomField>
    <fullName>UF_Transportador__c</fullName>
    <label>UF Transportador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>