Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Valor_Aproximado_dos_Tributos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Aproximado_dos_Tributos__c</fullName>
    <label>Valor Aproximado dos Tributos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>