Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Valor_da_Duplicata__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_Duplicata__c</fullName>
    <label>Valor da Duplicata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>