Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Valor_do_Frete__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Frete__c</fullName>
    <label>Valor do Frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>