Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Valor_Total_da_NFe__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_da_NFe__c</fullName>
    <label>Valor Total da NFe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>