Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Valor_Total_dos_productos_e_servicos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_dos_productos_e_servicos__c</fullName>
    <label>Valor Total dos productos e servicos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>