Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notas fiscais eletrônicas</relationshipLabel>
    <relationshipName>Notas_fiscais_eletr_nicas</relationshipName>
    <type>Lookup</type>
</CustomField>