Salesforce/main/default/main/default/objects/Nota_Fiscal_Eletr_nica__c/fields/Volumes_Transportados__c.field-meta.xml
<CustomField>
    <fullName>Volumes_Transportados__c</fullName>
    <label>Volumes Transportados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>